added multi column with direction rtl

--- a/boilerplate/index.mjml
+++ b/boilerplate/index.mjml
@@ -68,6 +68,14 @@
             
             <mj-include path="_inc/columns.mjml" />
 
+            <mj-include path="_inc/two-col-left.mjml" />
+
+            <mj-include path="_inc/two-col-right.mjml" />
+
+            <mj-include path="_inc/two-col-left.mjml" />
+            
+            <mj-include path="_inc/two-col-right.mjml" />
+
             <mj-include path="_inc/structure.mjml" />
 
             <mj-include path="_inc/bottom.mjml" />
