--- a/boilerplate/index.mjml
+++ b/boilerplate/index.mjml
@@ -40,6 +40,11 @@
                 border-radius="5px"
                 font-weight="bold"
             />
+            <mj-divider
+                border-width="1px" 
+                border-style="solid" 
+                border-color="lightgrey"
+            />
             <mj-class
                 name="link-nostyle"
                 color="inherit"
