--- a/boilerplate/index.mjml
+++ b/boilerplate/index.mjml
@@ -1,13 +1,25 @@
 <mjml>
     <mj-head>
+
+        <!-- custom fonts (only working for apple mail and iphone/ipad) -->
         <mj-font
-            name="Raleway"
+            name="Roboto"
             href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900"
         />
+        <mj-style>
+            @font-face
+            {
+              font-family: 'Custom';
+              font-style: normal;
+              font-weight: 400;
+              src: url("_img/font.woff2") format('woff2');
+            }
+        </mj-style>
+
         <mj-attributes>
             <mj-all
                 padding="0"
-                font-family="Roboto"
+                font-family="Roboto, Custom, sans-serif"
                 color="#333333"
                 align="center"
             />
@@ -44,11 +56,6 @@
                 border-width="1px" 
                 border-style="solid" 
                 border-color="lightgrey"
-            />
-            <mj-class
-                name="link-nostyle"
-                color="inherit"
-                text-decoration="none"
             />
             <mj-class
                 name="big"
@@ -111,7 +118,7 @@
             
             <mj-include path="_inc/top.mjml" />
 
-            <mj-include path="_inc/structure.mjml" />
+            <mj-include path="_inc/simple.mjml" />
             
             <mj-include path="_inc/columns.mjml" />
 
@@ -123,7 +130,9 @@
             
             <mj-include path="_inc/two-col-right.mjml" />
 
-            <mj-include path="_inc/structure.mjml" />
+            <mj-include path="_inc/simple.mjml" />
+
+            <mj-include path="_inc/columns-inline.mjml" />
 
             <mj-include path="_inc/bottom.mjml" />
             
