--- a/boilerplate/_inc/two-col-left.mjml
+++ b/boilerplate/_inc/two-col-left.mjml
@@ -8,7 +8,7 @@
             css-class="mobile-full-width"
         >
             <mj-image
-                src="_img/test.jpg"
+                src="_assets/test.jpg"
             />
         </mj-column>
 
