--- a/boilerplate/index.mjml
+++ b/boilerplate/index.mjml
@@ -86,31 +86,12 @@
                 border: none;
             }
         </mj-style>
-        <!-- iphone: full width images -->
-        <mj-style>
-            @media only screen and (max-width:500px)
-            {
-                .mobile-full-width table,
-                .mobile-full-width td,
-                .mobile-full-width td img { min-width:100%; }
-            }
-        </mj-style>
-        <!-- iphone: increase font sizes (we choose here a bigger viewport because cleverreach and gmx fail when this rule gets hoisted) -->
-        <mj-style>
-            @media only screen and (max-width:500px)
-            {
-                *[style*="font-size:16"],
-                *[style*="font-size: 16"] { font-size:20px !important;line-height:24px !important; }
-                *[style*="font-size:13"],
-                *[style*="font-size: 13"] { font-size:17px !important;line-height:22px !important; }
-                *[style*="font-size:10"],
-                *[style*="font-size: 10"] { font-size:15px !important;line-height:20px !important; }
-            }
-        </mj-style>
     </mj-head>
     <mj-body>
         <mj-container>
             
+            <mj-include path="_inc/iphone.mjml" />
+
             <mj-include path="_inc/top.mjml" />
 
             <mj-include path="_inc/simple.mjml" />
