--- a/boilerplate/_inc/divider.mjml
+++ b/boilerplate/_inc/divider.mjml
@@ -4,6 +4,7 @@
 
             <!-- a divider only can be aligned center -->
             <!-- it should also not have a fixed width (because of iphone bug) -->
+            <!-- if it should have a fixed width, use mj-button instead (see below) -->
             <mj-divider
                 border-width="1px" 
                 border-style="solid" 
