--- a/boilerplate/_inc/columns.mjml
+++ b/boilerplate/_inc/columns.mjml
@@ -3,7 +3,7 @@
 
         <mj-column
             width="25%"
-            padding="2%"
+            padding="0% 2%"
         >
             <mj-text>
                 test
@@ -12,7 +12,7 @@
 
         <mj-column
             width="25%"
-            padding="2%"
+            padding="0% 2%"
         >
             <mj-text>
                 test
@@ -21,7 +21,7 @@
 
         <mj-column
             width="25%"
-            padding="2%"
+            padding="0% 2%"
         >
             <mj-text>
                 test
@@ -30,7 +30,7 @@
 
         <mj-column
             width="25%"
-            padding="2%"
+            padding="0% 2%"
         >
             <mj-text>
                 test
