Committed with Git-Upload

--- a/boilerplate/_inc/simple.mjml
+++ b/boilerplate/_inc/simple.mjml
@@ -5,6 +5,12 @@
             text
         </mj-text>
 
+        <mj-text
+            css-class="mobile-hidden"
+        >
+            this is hidden on most mobile devices
+        </mj-text>
+
         <mj-image
             src="_assets/test.jpg"
         />
