--- a/boilerplate/_inc/top.mjml
+++ b/boilerplate/_inc/top.mjml
@@ -6,7 +6,7 @@
             mj-class="small strong"
         >
             <!--#online_version #-->
-            Wird der Newsletter nicht richtig angezeigt? Dann bitte <a class="link-nostyle" href="{ONLINE_VERSION}">hier klicken</a>.
+            Wird der Newsletter nicht richtig angezeigt? Dann bitte <a class="link-nostyle" href="{ONLINE_VERSION}" target="_blank">hier klicken</a>.
             <!--#/online_version#-->
         </mj-text>
     </mj-column>
