--- a/boilerplate/_inc/top.mjml
+++ b/boilerplate/_inc/top.mjml
@@ -1,13 +1,9 @@
-<mj-section
-    background-color="transparent"
->
-    <mj-column>
-        <mj-text
-            mj-class="small strong"
-        >
-            <!--#online_version #-->
-            Wird der Newsletter nicht richtig angezeigt? Dann bitte <a class="link-nostyle" href="{ONLINE_VERSION}" target="_blank">hier klicken</a>.
-            <!--#/online_version#-->
-        </mj-text>
-    </mj-column>
+<mj-section background-color="transparent">
+  <mj-column>
+    <mj-text mj-class="small strong">
+      <!--#online_version #-->
+      Wird der Newsletter nicht richtig angezeigt? Dann bitte <a class="link-nostyle" href="{ONLINE_VERSION}" target="_blank">hier klicken</a>.
+      <!--#/online_version#-->
+    </mj-text>
+  </mj-column>
 </mj-section>
