--- a/boilerplate/_inc/two-col-left.mjml
+++ b/boilerplate/_inc/two-col-left.mjml
@@ -3,7 +3,7 @@
     <mj-image src="_assets/test.jpg" />
   </mj-column>
 
-  <mj-column width="50%" padding="0% 2%" css-class="mobile-full-width">
+  <mj-column width="50%" padding="0% 2%" css-class="no-mobile-full-width">
     <mj-text>
       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
     </mj-text>
